--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -17,10 +17,10 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: user-service
-          uri: lb://user-service
+        - id: catalogo-service
+          uri: lb://catalogo-service
           predicates:
-            - Path=/user/**
+            - Path=/catalogo/**
           filters:
             - AuthFilter
         - id: inventario-service
