--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -43,3 +43,12 @@ spring:
           uri: lb://auth-service
           predicates:
             - Path=/auth/**
+            
+    globalcors:
+      corsConfigurations:
+        '[/**]':
+          allowedOrigins: "http://localhost:4200"
+          allowedMethods: "GET, POST, PUT, DELETE"
+          allowedHeaders: "Authorization, Content-Type"
+          allowCredentials: true
+          maxAge: 3600
