--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -28,7 +28,7 @@ spring:
         - id: catalogo-service
           uri: lb://catalogo-service
           predicates:
-            - Path=/catalogo/**
+            - Path=/api/service/catalogo/**
           filters:
             - AuthFilter
         - id: inventario-service
