Fix config-data se ajuste url para el microservicio inventario /api/service/inventario/

--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -34,7 +34,7 @@ spring:
         - id: inventario-service
           uri: lb://inventario-service
           predicates:
-            - Path=/inventario/**
+            - Path=/api/service/inventario/**
         - id: venta-service
           uri: lb://venta-service
           predicates:
